week4/assignment-3-alb-autoscaling/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Week 4 Assignment 3 - ALB and Auto Scaling.
Parameters:
  InstanceType:
    Type: String
    Default: t3.micro
  LatestAmiId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64
  MinSize:
    Type: Number
    Default: 2
  MaxSize:
    Type: Number
    Default: 4
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.50.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: { Ref: VPC }
      CidrBlock: 10.50.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: { Fn::Select: [0, { Fn::GetAZs: '' }] }
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: { Ref: VPC }
      CidrBlock: 10.50.2.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: { Fn::Select: [1, { Fn::GetAZs: '' }] }
  IGW:
    Type: AWS::EC2::InternetGateway
  IGWAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: { Ref: VPC }
      InternetGatewayId: { Ref: IGW }
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: { VpcId: { Ref: VPC } }
  DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: IGWAttachment
    Properties:
      RouteTableId: { Ref: PublicRouteTable }
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: { Ref: IGW }
  Assoc1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: { SubnetId: { Ref: PublicSubnet1 }, RouteTableId: { Ref: PublicRouteTable } }
  Assoc2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: { SubnetId: { Ref: PublicSubnet2 }, RouteTableId: { Ref: PublicRouteTable } }
  AlbSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: HTTP to ALB
      VpcId: { Ref: VPC }
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
  InstanceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: HTTP from ALB
      VpcId: { Ref: VPC }
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: { Ref: AlbSG }
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: { Ref: LatestAmiId }
        InstanceType: { Ref: InstanceType }
        SecurityGroupIds: [{ Ref: InstanceSG }]
        UserData:
          Fn::Base64:
            Fn::Sub: |
              #!/bin/bash
              dnf install -y httpd
              systemctl enable --now httpd
              TOKEN=$(curl -sS -X PUT -H 'X-aws-ec2-metadata-token-ttl-seconds: 21600' http://169.254.169.254/latest/api/token)
              ID=$(curl -sS -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/instance-id)
              echo "<h1>Week 4 ALB + Auto Scaling</h1><p>Instance: $ID</p>" > /var/www/html/index.html
  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: { Ref: VPC }
      Port: 80
      Protocol: HTTP
      TargetType: instance
      HealthCheckPath: /
  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      SecurityGroups: [{ Ref: AlbSG }]
      Subnets: [{ Ref: PublicSubnet1 }, { Ref: PublicSubnet2 }]
  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: { Ref: LoadBalancer }
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: { Ref: TargetGroup }
  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      MinSize: { Ref: MinSize }
      MaxSize: { Ref: MaxSize }
      DesiredCapacity: { Ref: MinSize }
      VPCZoneIdentifier: [{ Ref: PublicSubnet1 }, { Ref: PublicSubnet2 }]
      TargetGroupARNs: [{ Ref: TargetGroup }]
      LaunchTemplate:
        LaunchTemplateId: { Ref: LaunchTemplate }
        Version: { Fn::GetAtt: [LaunchTemplate, LatestVersionNumber] }
      HealthCheckType: ELB
      HealthCheckGracePeriod: 120
  CpuScalingPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: { Ref: AutoScalingGroup }
      PolicyType: TargetTrackingScaling
      TargetTrackingConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: 60
Outputs:
  LoadBalancerUrl:
    Value: { Fn::Sub: 'http://${LoadBalancer.DNSName}' }
